# melange

./: .gitignore  AGENTS.md  CHANGELOG.md  CI_CD_PIPELINE.md  CLAUDE.md  CODEGEN_REVIEW.md  Cargo.toml  LICENSE-MIT  MASTER_REVIEW_SUMMARY.md  MATRIX_MATH_REVIEW.md  MNA_STAMPING_REVIEW.md  NR_SOLVER_REVIEW.md  README.md  SECURITY.md  SPICE_VALIDATION_PLAN.md  TESTING_GAPS.md  TESTING_INFRASTRUCTURE_SUMMARY.md  TEST_COVERAGE_REPORT.md  clippy.toml  dk_method_review_report.md
circuits/: four-tube-two-xfmr-fb.cir  pultec-eq.cir  pultec-simplified.cir  tube-transformer-fb.cir  tweed-preamp.cir  two-stage-xfmr-fb.cir  two-xfmr-two-tube-fb.cir  wurli-preamp.cir  wurli-tremolo.cir
crates/melange-plugin/: Cargo.toml
crates/melange-plugin/src/: lib.rs
crates/melange-solver/: Cargo.toml
crates/melange-solver/benches/: solver_benchmarks.rs
crates/melange-solver/examples/: compare_solvers.rs  debug_mordor.rs  lockstep_compare.rs  lockstep_compare.rs.archived  pultec_codegen_compare.rs  pultec_diag.rs  pultec_diag.rs.archived  test_antiparallel.rs  test_mordor.rs  test_mordor_working.rs
crates/melange-solver/fuzz/: Cargo.toml  README.md
crates/melange-solver/fuzz/fuzz_targets/: parse_netlist.rs
crates/melange-solver/src/: codegen.rs  dc_op.rs  device_types.rs  dk.rs  dk_math_verification.rs  lib.rs  linear_solver.rs  lu.rs  mna.rs  parser.rs  solver.rs
crates/melange-solver/src/codegen/: emitter.rs  ir.rs  mod.rs  routing.rs  rust_emitter.rs
crates/melange-solver/src/codegen/rust_emitter/: dc_op_emitter.rs  dk_emitter.rs  dk_solver.rs  helpers.rs  mod.rs  nodal_emitter.rs  nr_helpers.rs
crates/melange-solver/templates/rust/: build_rhs.rs.tera  constants.rs.tera  device_bjt.rs.tera  device_diode.rs.tera  device_jfet.rs.tera  device_mosfet.rs.tera  device_tube.rs.tera  device_vca.rs.tera  extract_voltages.rs.tera  final_voltages.rs.tera  header.rs.tera  mat_vec_mul_s.rs.tera  process_sample.rs.tera  spice_limiting.rs.tera  state.rs.tera  update_history.rs.tera
crates/melange-solver/tests/: README.md  augmented_mna_tests.rs  codegen_named_constants_tests.rs  codegen_verification_tests.rs  coupled_inductor_tests.rs  cross_validation_tests.rs  dc_op_accessor_tests.rs  dc_op_recompute_tests.rs  dc_operating_point_tests.rs  dk_vs_nodal_tests.rs  eq_curve_tests.rs  forward_active_bjt_tests.rs  full_lu_optimization_tests.rs  funkyinduct_character_tests.rs  gang_tests.rs  golden_ref_tests.rs  inductor_tests.rs  klon_tests.rs  matrix_math_tests.rs  neve_1073_eq_tests.rs  nodal_codegen_tests.rs  noise_psd_validation.rs  nonlinear_dc_op_tests.rs  nr_jacobian_verification_tests.rs  numerical_accuracy_tests.rs  numerical_edge_case_tests.rs  opamp_tests.rs  pot_tests.rs  pultec_dc_op_test.rs  record_golden_refs.rs  runtime_source_tests.rs  safety_tests.rs  sm_pot_sweep_tests.rs  solver_property_tests.rs  subcircuit_tests.rs  support_smoke_test.rs  switch_tests.rs  vcr_alc_tests.rs  warmup_samples_tests.rs  wiper_tests.rs
crates/melange-solver/tests/golden/: bjt_ce_sine_500hz.json  diode_clipper_sine_500hz.json  jfet_cs_sine_500hz.json  mosfet_cs_sine_500hz.json  opamp_inverting_sine_1k.json  opamp_noninverting_sine_1k.json  rc_highpass_sine_1k.json  rc_lowpass_sine_1k.json  rc_lowpass_step.json  triode_cc_sine_500hz.json
crates/melange-solver/tests/support/: mod.rs
crates/melange-validate/: Cargo.toml
crates/melange-validate/src/: comparison.rs  lib.rs  spice_runner.rs  visualizer.rs
crates/melange-validate/tests/: end_to_end.rs  spice_validation.rs  spice_validation_tests.rs.disabled
crates/melange-validate/tests/data/antiparallel_diodes/: circuit.cir  circuit_no_vin.cir  input_pwl.txt  reference_tran.txt
crates/melange-validate/tests/data/bjt_common_emitter/: circuit.cir  circuit_no_vin.cir  input_pwl.txt  reference_tran.txt
crates/melange-validate/tests/data/diode_clipper/: circuit.cir  circuit_no_vin.cir  input_pwl.txt  reference_tran.txt
crates/melange-validate/tests/data/jfet_common_source/: circuit.cir  jfet_common_source_failure_report.html
crates/melange-validate/tests/data/mosfet_common_source/: circuit.cir  input_pwl.txt  mosfet_common_source_failure_report.html
crates/melange-validate/tests/data/neve_1073_output/: circuit.cir  input_pwl.txt
crates/melange-validate/tests/data/neve_1073_preamp/: circuit.cir  input_pwl.txt
crates/melange-validate/tests/data/opamp_inverting/: circuit.cir
crates/melange-validate/tests/data/pot_modulation/: circuit.cir  circuit_melange.cir  circuit_static.cir
crates/melange-validate/tests/data/rc_lowpass/: circuit.cir  circuit_no_vin.cir  input_pwl.txt  output.txt  reference_tran.txt
crates/melange-validate/tests/data/tube_screamer/: circuit.cir
crates/melange-validate/tests/data/tube_screamer_wiper/: circuit.cir  input_pwl.txt  tube_screamer_wiper_failure_report.html
crates/melange-validate/tests/data/wurli_preamp/: circuit.cir  input_pwl.txt
docs/: GENERATED_CODE_LICENSE.md  GETTING_STARTED.md  NETLIST_GUIDE.md  NODAL_CODEGEN_PLAN.md  PLUGIN_GUIDE.md  REVIEW_SUMMARY.md  ROADMAP.md  STATUS.md  architecture.md  auto-detection-plan.md  cli-ui-enhancement-plan.md  codegen.md  companion-models.md  critical-fixes-2026-02-23.md  device-models.md  dk-method.md  klon-centaur-research.md  landscape.md  limitations.md  melange-pot-smoothing-response-2026-04-20.md  mna-assembly.md  neve-1073-ba284-schematic-notes.md  neve-1073-tracking.md  nr-solver.md  openwurli-extraction.md  power-amp-codegen-status.md  pultec-gain-staging-investigation.md  pultec-nfb-schemer-report.md  review-swarm-2026-03-20.md  review-swarm-2026-03-21-codegen.md  review-swarm-2026-03-21-reliability.md  review-swarm-2026-03-21-ssl-readiness.md  spice-circuit-resources.md  (+3 more)
tools/melange-cli/: Cargo.toml
tools/melange-cli/src/: cache.rs  circuits.rs  codegen_runner.rs  kicad_import.rs  main.rs  plugin_template.rs  sources.rs  wav_embed.rs.inc
tools/melange-cli/src/builtins/: big-muff.cir  fuzz-face.cir  mordor-screamer.cir  rc-lowpass.cir  ssl-bus-compressor.cir  tube-preamp.cir  tube-screamer.cir
tools/melange-cli/tests/: cli_integration.rs
(+87 files in other folders)
