[workspace]
resolver = "2"
members = [
    "crates/melange-primitives",
    "crates/melange-devices",
    "crates/melange-solver",
    "crates/melange-validate",
    "crates/melange-plugin",
    "tools/melange-cli",
]
# The cargo-fuzz target is a separate nightly-only crate with its own
# Cargo.toml; it must not be pulled into the stable workspace build.
exclude = [
    "crates/melange-solver/fuzz",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/melange-audio/melange"
description = "Circuit simulation toolkit for real-time audio DSP"
keywords = ["audio", "dsp", "circuit", "simulation", "codegen"]
categories = ["multimedia::audio", "science", "development-tools"]
readme = "README.md"

[workspace.dependencies]
melange-primitives = { path = "crates/melange-primitives" }
melange-devices = { path = "crates/melange-devices" }
melange-solver = { path = "crates/melange-solver" }
melange-validate = { path = "crates/melange-validate" }
melange-plugin = { path = "crates/melange-plugin" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
