[package]
name = "melange-solver"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MNA/DK-method circuit solver with netlist parsing and optimized code generation"

[dependencies]
melange-primitives = { workspace = true }
melange-devices = { workspace = true }
smallvec = { version = "1.13", default-features = false }
serde = { version = "1.0", features = ["derive"] }
tera = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1.0"

[[bench]]
name = "solver_benchmarks"
harness = false
