[package]
name = "melange-solver"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MNA/DK-method circuit solver with netlist parsing and optimized code generation"

[features]
default = ["codegen"]
codegen = ["tera"]

[dependencies]
melange-primitives = { workspace = true }
melange-devices = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
tera = { version = "1", optional = true }
log = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1.0"

[[bench]]
name = "solver_benchmarks"
harness = false
