[package]
name = "melange-solver"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MNA/DK-method circuit solver with netlist parsing and optimized code generation"

[features]
default = ["codegen"]
codegen = ["tera"]

[dependencies]
melange-primitives = { workspace = true }
melange-devices = { workspace = true }
serde = { workspace = true }
tera = { version = "1", optional = true }
log = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = { workspace = true }

[[bench]]
name = "solver_benchmarks"
harness = false
