[package]
name = "melange-validate"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SPICE-to-Rust validation pipeline: automated comparison, tolerance testing, diagnostics"

[features]
default = ["plotting"]
plotting = ["plotters"]
ngspice = ["regex"]  # Enable ngspice integration (requires ngspice installed)

[dependencies]
melange-primitives = { workspace = true }
melange-devices = { workspace = true }
melange-solver = { workspace = true }

# FFT for spectral analysis (THD computation)
rustfft = "6.2"
realfft = "3.4"

# Serialization for data export
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# Plotting (optional, for HTML reports)
plotters = { version = "0.3", optional = true }

# Logging
log = "0.4"

# Error handling
thiserror = "2.0"

# Regex for text processing (optional)
regex = { version = "1.10", optional = true }

[dev-dependencies]
tempfile = "3.10"
