[package]
name = "melange-validate"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SPICE-to-Rust validation pipeline: automated comparison, tolerance testing, diagnostics"

[dependencies]
melange-primitives = { workspace = true }
melange-devices = { workspace = true }
melange-solver = { workspace = true }

# FFT for spectral analysis (THD computation)
rustfft = "6.2"
realfft = "3.4"

# Serialization for data export
serde = { workspace = true }
serde_json = { workspace = true }
csv = "1.3"

# Logging
log = { workspace = true }

# Error handling
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.10"
