[package]
name = "melange-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for circuit compilation, validation, and benchmarking"

[[bin]]
name = "melange"
path = "src/main.rs"

[dependencies]
melange-primitives = { workspace = true }
melange-devices = { workspace = true }
melange-solver = { workspace = true, features = ["codegen"] }
melange-validate = { workspace = true }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
hound = "3.5"
serde = { workspace = true }
toml = "0.8"
dirs = "5.0"
ureq = "2.9"
quick-xml = "0.37"

[features]
default = []
async = []
